prueba2/bgd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tekton1
  name: tekton1
  namespace: tekton1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tekton1
  strategy: {}
  template:
    metadata:
      labels:
        app: tekton1
    spec:
      containers:
      - image: robertorm/pruebatekton:v1
        name: tekton1
        resources: {}
