prueba2/tekton1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton1
spec:
  rules:
    - host: tekton1.devnation
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton1
                port:
                  number: 80
